Somewhere along the way, the 'RAT Selection' title changed back to Network Affinity. Rectify.

--- a/Network Affinity/Resources/Network Affinity.plist
+++ b/Network Affinity/Resources/Network Affinity.plist
@@ -1,7 +1,17 @@
 {
-title = "Network Affinity";
-items = (
-{ cell=PSGroupCell; },
-{ cell=PSLinkListCell; label="Network Affinity"; detail="PSListItemsController"; valuesDataSource="networkAffinityValues:"; titlesDataSource="networkAffinityTitles:"; get="getNetworkAffinity:"; set="setNetworkAffinity:forSpecifier:";},
-);
+	title = "Network Affinity";
+	items = (
+		{
+			cell = PSGroupCell;
+		},
+		{
+			cell = PSLinkListCell;
+			label = "RAT Selection";
+			detail = "PSListItemsController";
+			valuesDataSource = "networkAffinityValues:";
+			titlesDataSource = "networkAffinityTitles:";
+			get = "getNetworkAffinity:";
+			set = "setNetworkAffinity:forSpecifier:";
+		},
+	);
 }
